# animated-dollop-ChatGPT-

./: .gitignore  Makefile  README.md  ROADMAP.md  VIDEO_SCRIPT.md  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
GitHubStarter.playground/: Contents.swift  contents.xcplayground
GitHubStarter.playground/Resources/: notification_triage_prompt.md  pr_review_checklist.md
GitHubStarter.playground/Sources/: PlaygroundSupport.swift
automation/: __init__.py  tasks.py
configs/: README.md  REFRESH_RATE.md
scripts/: bootstrap.sh
src/backend/api/: README.md
src/backend/youtube_plugin_tools/: cli.py  manifest.py
src/frontend/: README.md
src/frontend/assets/: README.md
src/youtube_plugin_tools/: __init__.py  manifest.py
tests/: test_automation.py  test_manifest.py  test_structure.py
website/: index.html  styles.css
