[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-plugin-tools"
version = "0.1.0"
description = "Utilities to scaffold and validate plugin manifests for YouTube integrations."
authors = [
  { name = "YouTube Plugin Engineering" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
